Fix access problem back button overlap with banner

--- a/webapp/channels/src/components/header_footer_route/header.scss
+++ b/webapp/channels/src/components/header_footer_route/header.scss
@@ -65,7 +65,7 @@
         }
     }
 
-    .header-back-button {
+    .header-back-button.signup-header {
         position: absolute;
         top: unset;
         bottom: -8px;
